--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <title>SAE_303</title>
 </head>
 <body>
+    <header>
+        <h1>SAE 303</h1>
+        <div class="menu" id="menu">
+            <a id="closeBtn" href="#" class="close">×</a>
+            <ul>
+                <li><a href="#">A propos</a></li>
+                <li><a href="#">Nos services</a></li>
+                <li><a href="#">Témoignages</a></li>
+                <li><a href="#">Sujet</a></li>
+            </ul>
+        </div>
+        <a href="#" id="openBtn">
+            <span class="burger-icon">
+              <span></span>
+              <span></span>
+              <span></span>
+            </span>
+          </a>
+    </header>
+
+    <div class="pr_block">
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod neque libero, expedita 
+    ipsa alias, quia quidem non ipsum quibusdam repellat harum nisi magnam dignissimos consectetur. Tempore laborum in omnis magni?</p>
+
+    <img src="img/ecole-esp.jpg" alt="chapeau_jetés_remise_de_diplomes">
+    <img src="img/OIP.jpg" alt="couloirs_ecoles">
+    </div>
     
     <script src="script.js"></script>
 </body>
