--- a/index.html
+++ b/index.html
@@ -1,40 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>SAE_303</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>SAE 303</h1>
-        <div class="menu" id="menu">
-            <a id="closeBtn" href="#" class="close">×</a>
-            <ul>
-                <li><a href="#">A propos</a></li>
-                <li><a href="#">Nos services</a></li>
-                <li><a href="#">Témoignages</a></li>
-                <li><a href="#">Sujet</a></li>
-            </ul>
-        </div>
-        <a href="#" id="openBtn">
-            <span class="burger-icon">
-              <span></span>
-              <span></span>
-              <span></span>
-            </span>
-          </a>
+      <button id="mode">colormode</button>
+      <h1>SAE 303</h1>
+      <div id="menu"></div>
     </header>
+    <h2>Le vrai du faux sur Parcoursup :</h2>
+    <container class="section_1">
+      <p>
+        Le vrai du faux sur Parcoursup : une campagne d’information pour
+        déconstruire les idées reçues sur Parcoursup Face à la désinformation à
+        laquelle Parcoursup n’échappe pas, les équipes de Parcoursup ont lancé
+        cette année une campagne d’information grand public afin de déconstruire
+        les principales idées reçues sur la plateforme et la manière dont se
+        déroule l’examen des dossiers. L’objectif était avant tout d’expliquer
+        concrètement les principes de fonctionnement de Parcoursup et de
+        rassurer les candidats et leurs familles au moment où ils formulaient
+        leurs vœux. Cette campagne 100% digitale s’est déclinée en plusieurs
+        volets : Un quiz interactif accessible depuis le site Parcoursup.fr :
+        les principales idées reçues autour de Parcoursup sont listées et
+        déconstruites à l’aide de questions «quiz»,
+      </p>
+      <div class="round">
+        <img class="img1" src="./img/ecole-esp.jpg" alt="jsp" />
+      </div>
+    </container>
 
-    <div class="pr_block">
- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod neque libero, expedita 
-    ipsa alias, quia quidem non ipsum quibusdam repellat harum nisi magnam dignissimos consectetur. Tempore laborum in omnis magni?</p>
-
-    <img src="img/ecole-esp.jpg" alt="chapeau_jetés_remise_de_diplomes">
-    <img src="img/OIP.jpg" alt="couloirs_ecoles">
-    </div>
-    
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
