--- a/index.html
+++ b/index.html
@@ -33,6 +33,31 @@
       </div>
     </container>
 
+    <container class="section_2">
+      <h2>Parcoursup c’est quoi ?</h2>
+      <div class="pres">
+        <ellipse class="ellipse"></ellipse>
+        <h3>
+          Des résultats d’admission supérieurs à 2022 pour les lycéens et les
+          étudiants en réorientation
+        </h3>
+      </div>
+      <div class="pres">
+        <ellipse class="ellipse"></ellipse>
+        <h3>
+          Des résultats d’admission supérieurs à 2022 pour les lycéens et les
+          étudiants en réorientation
+        </h3>
+      </div>
+      <div class="pres">
+        <ellipse class="ellipse"></ellipse>
+        <h3>
+          Des résultats d’admission supérieurs à 2022 pour les lycéens et les
+          étudiants en réorientation
+        </h3>
+      </div>
+    </container>
+
     <script src="script.js"></script>
   </body>
 </html>
