--- a/index.html
+++ b/index.html
@@ -12,51 +12,72 @@
       <h1>SAE 303</h1>
       <div id="menu"></div>
     </header>
-    <h2>Le vrai du faux sur Parcoursup :</h2>
-    <container class="section_1">
-      <p>
-        Le vrai du faux sur Parcoursup : une campagne d’information pour
-        déconstruire les idées reçues sur Parcoursup Face à la désinformation à
-        laquelle Parcoursup n’échappe pas, les équipes de Parcoursup ont lancé
-        cette année une campagne d’information grand public afin de déconstruire
-        les principales idées reçues sur la plateforme et la manière dont se
-        déroule l’examen des dossiers. L’objectif était avant tout d’expliquer
-        concrètement les principes de fonctionnement de Parcoursup et de
-        rassurer les candidats et leurs familles au moment où ils formulaient
-        leurs vœux. Cette campagne 100% digitale s’est déclinée en plusieurs
-        volets : Un quiz interactif accessible depuis le site Parcoursup.fr :
-        les principales idées reçues autour de Parcoursup sont listées et
-        déconstruites à l’aide de questions «quiz»,
-      </p>
-      <div class="round">
-        <img class="img1" src="./img/ecole-esp.jpg" alt="jsp" />
-      </div>
-    </container>
+    <div id="wrapper">
+      <h2>Le vrai du faux sur Parcoursup :</h2>
+      <container class="section_1">
+        <p>
+          Le vrai du faux sur Parcoursup : une campagne d’information pour
+          déconstruire les idées reçues sur Parcoursup Face à la désinformation
+          à laquelle Parcoursup n’échappe pas, les équipes de Parcoursup ont
+          lancé cette année une campagne d’information grand public afin de
+          déconstruire les principales idées reçues sur la plateforme et la
+          manière dont se déroule l’examen des dossiers. L’objectif était avant
+          tout d’expliquer concrètement les principes de fonctionnement de
+          Parcoursup et de rassurer les candidats et leurs familles au moment où
+          ils formulaient leurs vœux. Cette campagne 100% digitale s’est
+          déclinée en plusieurs volets : Un quiz interactif accessible depuis le
+          site Parcoursup.fr : les principales idées reçues autour de Parcoursup
+          sont listées et déconstruites à l’aide de questions «quiz»,
+        </p>
+        <div class="round">
+          <img class="img1" src="./img/OIP.jpg" alt="jsp" />
+        </div>
+      </container>
 
-    <container class="section_2">
-      <h2>Parcoursup c’est quoi ?</h2>
-      <div class="pres">
-        <ellipse class="ellipse"></ellipse>
-        <h3>
-          Des résultats d’admission supérieurs à 2022 pour les lycéens et les
-          étudiants en réorientation
-        </h3>
-      </div>
-      <div class="pres">
-        <ellipse class="ellipse"></ellipse>
-        <h3>
-          Des résultats d’admission supérieurs à 2022 pour les lycéens et les
-          étudiants en réorientation
-        </h3>
-      </div>
-      <div class="pres">
-        <ellipse class="ellipse"></ellipse>
-        <h3>
-          Des résultats d’admission supérieurs à 2022 pour les lycéens et les
-          étudiants en réorientation
-        </h3>
-      </div>
-    </container>
+      <container class="section_2">
+        <h2>Parcoursup c’est quoi ?</h2>
+        <div class="row">
+          <div class="pres">
+            <div class="ellipse"></div>
+            <h3>
+              Des résultats d’admission supérieurs à 2022 pour les lycéens et
+              les étudiants en réorientation
+            </h3>
+          </div>
+          <div class="pres">
+            <div class="ellipse"></div>
+            <h3>
+              Des résultats d’admission supérieurs à 2022 pour les lycéens et
+              les étudiants en réorientation
+            </h3>
+          </div>
+          <div class="pres">
+            <div class="ellipse"></div>
+            <h3>
+              Des résultats d’admission supérieurs à 2022 pour les lycéens et
+              les étudiants en réorientation
+            </h3>
+          </div>
+        </div>
+      </container>
+
+      <container class="section_3">
+        <div class=".round_2">
+          <img src="/sae_303/img/ecole-esp.jpg" alt="jsp" />
+        </div>
+        <h2>Le vrai du faux sur Parcoursup</h2>
+        <p>
+          une campagne d’information pour déconstruire les idées reçues sur
+          Parcoursup Face à la désinformation à laquelle Parcoursup n’échappe
+          pas, les équipes de Parcoursup ont lance el,foe, oz el
+          pfezp;fpoêzkprkezokm ;,roe^k pgko,oerg kro kle zkkfjo kozj fozulfk
+          zjfpo z
+        </p>
+      </container>
+    </div>
+    <footer class="foot">
+      <h3>Alexandre - Auger</h3>
+    </footer>
 
     <script src="script.js"></script>
   </body>
