--- a/index.html
+++ b/index.html
@@ -1,84 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="icon">
     <title>SAE_303</title>
-  </head>
-  <body>
-    <header>
-      <button id="mode">colormode</button>
-      <h1>SAE 303</h1>
-      <div id="menu"></div>
-    </header>
-    <div id="wrapper">
-      <h2>Le vrai du faux sur Parcoursup :</h2>
-      <container class="section_1">
-        <p>
-          Le vrai du faux sur Parcoursup : une campagne d’information pour
-          déconstruire les idées reçues sur Parcoursup Face à la désinformation
-          à laquelle Parcoursup n’échappe pas, les équipes de Parcoursup ont
-          lancé cette année une campagne d’information grand public afin de
-          déconstruire les principales idées reçues sur la plateforme et la
-          manière dont se déroule l’examen des dossiers. L’objectif était avant
-          tout d’expliquer concrètement les principes de fonctionnement de
-          Parcoursup et de rassurer les candidats et leurs familles au moment où
-          ils formulaient leurs vœux. Cette campagne 100% digitale s’est
-          déclinée en plusieurs volets : Un quiz interactif accessible depuis le
-          site Parcoursup.fr : les principales idées reçues autour de Parcoursup
-          sont listées et déconstruites à l’aide de questions «quiz»,
-        </p>
-        <div class="round">
-          <img class="img1" src="./img/OIP.jpg" alt="jsp" />
-        </div>
-      </container>
+    <style>
+        body {
+            visibility: hidden;
+            opacity: 0;
+        }
+    </style>
+</head>
+    <body>
+        
+<!--header-->
 
-      <container class="section_2">
-        <h2>Parcoursup c’est quoi ?</h2>
-        <div class="row">
-          <div class="pres">
-            <div class="ellipse"></div>
-            <h3>
-              Des résultats d’admission supérieurs à 2022 pour les lycéens et
-              les étudiants en réorientation
-            </h3>
-          </div>
-          <div class="pres">
-            <div class="ellipse"></div>
-            <h3>
-              Des résultats d’admission supérieurs à 2022 pour les lycéens et
-              les étudiants en réorientation
-            </h3>
-          </div>
-          <div class="pres">
-            <div class="ellipse"></div>
-            <h3>
-              Des résultats d’admission supérieurs à 2022 pour les lycéens et
-              les étudiants en réorientation
-            </h3>
-          </div>
+<header>
+    <div id="head">
+        <button id="mode">colormode</button>
+        <h1>SAE 303</h1>
+        <div class="button_container" id="toggle">
+            <span class="top"></span>
+            <span class="middle"></span>
+            <span class="bottom"></span>
         </div>
-      </container>
 
-      <container class="section_3">
-        <div class=".round_2">
-          <img src="/sae_303/img/ecole-esp.jpg" alt="jsp" />
+        <div class="overlay" id="overlay">
+            <nav class="overlay-menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <h2>Le vrai du faux sur Parcoursup</h2>
-        <p>
-          une campagne d’information pour déconstruire les idées reçues sur
-          Parcoursup Face à la désinformation à laquelle Parcoursup n’échappe
-          pas, les équipes de Parcoursup ont lance el,foe, oz el
-          pfezp;fpoêzkprkezokm ;,roe^k pgko,oerg kro kle zkkfjo kozj fozulfk
-          zjfpo z
-        </p>
-      </container>
     </div>
-    <footer class="foot">
-      <h3>Alexandre - Auger</h3>
-    </footer>
+</header>
 
-    <script src="script.js"></script>
-  </body>
+<!--première partie-->
+
+<div class="container">
+        <div class="section_1">
+            <h2>Le vrai du faux sur Parcoursup :</h2>
+            <p>
+                Le vrai du faux sur Parcoursup : une campagne d’information pour
+                déconstruire les idées reçues sur Parcoursup Face à la désinformation
+                à laquelle Parcoursup n’échappe pas, les équipes de Parcoursup ont
+                lancé cette année une campagne d’information grand public afin de
+                déconstruire les principales idées reçues sur la plateforme et la
+                manière dont se déroule l’examen des dossiers. L’objectif était avant
+                tout d’expliquer concrètement les principes de fonctionnement de
+                Parcoursup et de rassurer les candidats et leurs familles au moment où
+                ils formulaient leurs vœux. Cette campagne 100% digitale s’est
+                déclinée en plusieurs volets : Un quiz interactif accessible depuis le
+                site Parcoursup.fr : les principales idées reçues autour de Parcoursup
+                sont listées et déconstruites à l’aide de questions «quiz»,
+            </p> 
+        </div>
+        <img class="img1" src="./img/OIP.jpg" alt="jsp" />
+</div>
+
+<!--deuxième partie-->
+
+<div class="blurball1"></div>
+<div class="blurball2"></div>
+
+    <div class="section_2">
+        <div class="title">
+            <h2>Parcoursup c’est quoi ?</h2>
+        </div>
+            <div class="row">
+                <div class="pres">
+                    <div class="ellipse">
+                    </div>
+                        <h3>
+                            Des résultats d’admission supérieurs à 2022 pour les lycéens et
+                            les étudiants en réorientation
+                        </h3>
+                </div>
+
+                <div class="pres">
+                    <div class="ellipse">
+                    </div>
+                        <h3>
+                            Des résultats d’admission supérieurs à 2022 pour les lycéens et
+                            les étudiants en réorientation
+                        </h3>
+                </div>
+
+                <div class="pres">
+                    <div class="ellipse">
+                    </div>
+                        <h3>
+                            Des résultats d’admission supérieurs à 2022 pour les lycéens et
+                            les étudiants en réorientation
+                        </h3>
+                </div>
+            </div>
+    </div>
+
+
+
+<!--troisième partie-->
+
+<div class="blurball3"></div>
+<div class="blurball4"></div>
+
+<div class="section_3">
+
+            <img src="/sae_303/img/ecole-esp.jpg" alt="jsp"/>
+
+            <h2>Le vrai du faux sur Parcoursup</h2>
+            <p>
+                une campagne d’information pour déconstruire les idées reçues sur
+                Parcoursup Face à la désinformation à laquelle Parcoursup n’échappe
+                pas, les équipes de Parcoursup ont lance el,foe, oz el
+                pfezp;fpoêzkprkezokm ;,roe^k pgko,oerg kro kle zkkfjo kozj fozulfk
+                zjfpo z
+            </p>
+</div>
+
+
+<footer>
+    <h3>Alexandre - Auger</h3>
+    <a href="#"><h3>Haut de page ↑</h3></a>
+</footer>
+
+        <script src="./js/script.js"></script>
+    </body>
 </html>
