--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <div class="row">
                 <div class="pres">
                     <div class="ellipse">
+                        <img class="cercle" src="/sae_303/img/fatigue.jpeg" alt="jsp"/>
                     </div>
                         <h3>
                             Des résultats d’admission supérieurs à 2022 pour les lycéens et
@@ -84,6 +85,7 @@
 
                 <div class="pres">
                     <div class="ellipse">
+                        <img class="cercle" src="/sae_303/img/ensemble.jpg" alt="jsp"/>
                     </div>
                         <h3>
                             Des résultats d’admission supérieurs à 2022 pour les lycéens et
@@ -93,6 +95,7 @@
 
                 <div class="pres">
                     <div class="ellipse">
+                        <img class="cercle" src="/sae_303/img/studi.jpeg" alt="jsp"/>
                     </div>
                         <h3>
                             Des résultats d’admission supérieurs à 2022 pour les lycéens et
