--- a/index.html
+++ b/index.html
@@ -1,137 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="shortcut icon" href="img/favicon.ico" type="icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="icon" />
     <title>SAE_303</title>
     <style>
-        body {
-            visibility: hidden;
-            opacity: 0;
-        }
+      body {
+        visibility: hidden;
+        opacity: 0;
+      }
     </style>
-</head>
-    <body>
-        
-<!--header-->
+  </head>
+  <body>
+    <!--header-->
 
-<header>
-    <div id="head">
+    <header>
+      <div id="head">
         <button id="mode">colormode</button>
         <h1>SAE 303</h1>
         <div class="button_container" id="toggle">
-            <span class="top"></span>
-            <span class="middle"></span>
-            <span class="bottom"></span>
+          <span class="top"></span>
+          <span class="middle"></span>
+          <span class="bottom"></span>
         </div>
 
         <div class="overlay" id="overlay">
-            <nav class="overlay-menu">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
+          <nav class="overlay-menu">
+            <ul>
+              <li><a href="admissions.html">Admissions par filière</a></li>
+              <li><a href="#">Hommes ou Femmes ?</a></li>
+              <li><a href="#">d'où viennent-ils</a></li>
+              <li><a href="#">Pourquoi ?</a></li>
+            </ul>
+          </nav>
         </div>
+      </div>
+    </header>
+
+    <!--première partie-->
+
+    <div class="container">
+      <div class="section_1">
+        <h2>Les BUT MMI dans Parcoursup :</h2>
+        <p>
+          Diplôme professionnel de niveau 6 (bac + 3), le BUT MMI (métiers du
+          multimédia et de l’Internet) forme à des activités relevant de
+          domaines variés, allant de la conception de sites Internet à la
+          gestion de communautés sur les réseaux sociaux, en passant par la
+          production de produits multimédias (jeux vidéo, applications mobiles,
+          etc.) ou le développement de services Web. Le BUT MMI propose trois
+          parcours différents, accessibles dès la 2e année : parcours création
+          numérique ; parcours stratégie de communication numérique et design
+          d’expérience ; parcours développement Web et dispositifs
+          interactifs.Le parcours création numérique vise à développer
+          l’expression de message sur différents médias, sous la forme de
+          création graphique et d’écriture multimédia. II permet d’acquérir les
+          techniques nécessaires à la création de ressources numériques,
+          notamment de publications Web. Il prépare principalement aux métiers
+          de designer, infographiste, game designer ou technicien audiovisuel.
+          Les principaux débouchés se situent en agences de communication, en
+          agences Web, en agences publicitaires, ou dans les services de
+          communication des grandes entreprises.
+        </p>
+      </div>
+      <img class="img1" src="./img/OIP.jpg" alt="jsp" />
     </div>
-</header>
 
-<!--première partie-->
+    <!--deuxième partie-->
 
-<div class="container">
-        <div class="section_1">
-            <h2>Le vrai du faux sur Parcoursup :</h2>
-            <p>
-                Le vrai du faux sur Parcoursup : une campagne d’information pour
-                déconstruire les idées reçues sur Parcoursup Face à la désinformation
-                à laquelle Parcoursup n’échappe pas, les équipes de Parcoursup ont
-                lancé cette année une campagne d’information grand public afin de
-                déconstruire les principales idées reçues sur la plateforme et la
-                manière dont se déroule l’examen des dossiers. L’objectif était avant
-                tout d’expliquer concrètement les principes de fonctionnement de
-                Parcoursup et de rassurer les candidats et leurs familles au moment où
-                ils formulaient leurs vœux. Cette campagne 100% digitale s’est
-                déclinée en plusieurs volets : Un quiz interactif accessible depuis le
-                site Parcoursup.fr : les principales idées reçues autour de Parcoursup
-                sont listées et déconstruites à l’aide de questions «quiz»,
-            </p> 
-        </div>
-        <img class="img1" src="./img/OIP.jpg" alt="jsp" />
-</div>
-
-<!--deuxième partie-->
-
-<div class="blurball1"></div>
-<div class="blurball2"></div>
+    <div class="blurball1"></div>
+    <div class="blurball2"></div>
 
     <div class="section_2">
-        <div class="title">
-            <h2>Parcoursup c’est quoi ?</h2>
+      <div class="title">
+        <h2>Le BUT MMI c’est quoi ?</h2>
+      </div>
+      <div class="row">
+        <div class="pres">
+          <div class="ellipse">
+            <img class="cercle" src="/sae_303/img/fatigue.jpeg" alt="jsp" />
+          </div>
+          <h3>
+            Un BUT accessible à tout titulaire d’un baccalauréat, général ou
+            technologique (STMG ou STI2D).
+          </h3>
         </div>
-            <div class="row">
-                <div class="pres">
-                    <div class="ellipse">
-                        <img class="cercle" src="/sae_303/img/fatigue.jpeg" alt="jsp"/>
-                    </div>
-                        <h3>
-                            Des résultats d’admission supérieurs à 2022 pour les lycéens et
-                            les étudiants en réorientation
-                        </h3>
-                </div>
 
-                <div class="pres">
-                    <div class="ellipse">
-                        <img class="cercle" src="/sae_303/img/ensemble.jpg" alt="jsp"/>
-                    </div>
-                        <h3>
-                            Des résultats d’admission supérieurs à 2022 pour les lycéens et
-                            les étudiants en réorientation
-                        </h3>
-                </div>
+        <div class="pres">
+          <div class="ellipse">
+            <img class="cercle" src="/sae_303/img/ensemble.jpg" alt="jsp" />
+          </div>
+          <h3>
+            Des travaux pratiques et des projets tutorés tout au long du cursus.
+          </h3>
+        </div>
 
-                <div class="pres">
-                    <div class="ellipse">
-                        <img class="cercle" src="/sae_303/img/studi.jpeg" alt="jsp"/>
-                    </div>
-                        <h3>
-                            Des résultats d’admission supérieurs à 2022 pour les lycéens et
-                            les étudiants en réorientation
-                        </h3>
-                </div>
-            </div>
+        <div class="pres">
+          <div class="ellipse">
+            <img class="cercle" src="/sae_303/img/studi.jpeg" alt="jsp" />
+          </div>
+          <h3>
+            Une insertion professionnelle facilité: et des poursuites d'études
+            vastes.
+          </h3>
+        </div>
+      </div>
     </div>
 
+    <!--troisième partie-->
 
+    <div class="blurball3"></div>
+    <div class="blurball4"></div>
 
-<!--troisième partie-->
+    <div class="section_3">
+      <img src="/sae_303/img/ecole-esp.jpg" alt="jsp" />
 
-<div class="blurball3"></div>
-<div class="blurball4"></div>
+      <h2>Accessible par Parcoursup</h2>
+      <p>
+        Parcoursup est la plateforme nationale et officielle sur laquelle tu vas
+        faire tes vœux d’orientation pour entrer en études supérieures, après le
+        bac ou lors d’une potentielle réorientation.En 2024, Parcoursup
+        référence plus de 20.000 formations (dont les BUT).
+      </p>
+    </div>
 
-<div class="section_3">
+    <footer>
+      <h3>Alexandre - Auger</h3>
+      <a href="#"><h3>Haut de page ↑</h3></a>
+    </footer>
 
-            <img src="/sae_303/img/ecole-esp.jpg" alt="jsp"/>
-
-            <h2>Le vrai du faux sur Parcoursup</h2>
-            <p>
-                une campagne d’information pour déconstruire les idées reçues sur
-                Parcoursup Face à la désinformation à laquelle Parcoursup n’échappe
-                pas, les équipes de Parcoursup ont lance el,foe, oz el
-                pfezp;fpoêzkprkezokm ;,roe^k pgko,oerg kro kle zkkfjo kozj fozulfk
-                zjfpo z
-            </p>
-</div>
-
-
-<footer>
-    <h3>Alexandre - Auger</h3>
-    <a href="#"><h3>Haut de page ↑</h3></a>
-</footer>
-
-        <script src="./js/script.js"></script>
-    </body>
+    <script src="./js/script.js"></script>
+  </body>
 </html>
