--- a/admissions.html
+++ b/admissions.html
@@ -63,6 +63,8 @@
 
     <!--deuxième partie-->
 
+    <div class="section_2"></div>
+
     <div class="blurball1"></div>
     <div class="blurball2"></div>
 
