--- a/femme.html
+++ b/femme.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/femme.css" />
     <link rel="shortcut icon" href="img/favicon.ico" type="icon" />
     <title>SAE_303</title>
     <style>
@@ -29,8 +29,8 @@
         <div class="overlay" id="overlay">
           <nav class="overlay-menu">
             <ul>
+              <li><a href="index.html">Accueil</a></li>
               <li><a href="admissions.html">Admissions par filière</a></li>
-              <li><a href="femme.html">Hommes ou Femmes ?</a></li>
               <li><a href="#">d'où viennent-ils</a></li>
               <li><a href="#">Pourquoi ?</a></li>
             </ul>
@@ -42,30 +42,15 @@
     <!--première partie-->
 
     <div class="container">
-      <div class="section_1">
-        <h2>Les BUT MMI dans Parcoursup :</h2>
-        <p>
-          Diplôme professionnel de niveau 6 (bac + 3), le BUT MMI (métiers du
-          multimédia et de l’Internet) forme à des activités relevant de
-          domaines variés, allant de la conception de sites Internet à la
-          gestion de communautés sur les réseaux sociaux, en passant par la
-          production de produits multimédias (jeux vidéo, applications mobiles,
-          etc.) ou le développement de services Web. Le BUT MMI propose trois
-          parcours différents, accessibles dès la 2e année : parcours création
-          numérique ; parcours stratégie de communication numérique et design
-          d’expérience ; parcours développement Web et dispositifs
-          interactifs.Le parcours création numérique vise à développer
-          l’expression de message sur différents médias, sous la forme de
-          création graphique et d’écriture multimédia. II permet d’acquérir les
-          techniques nécessaires à la création de ressources numériques,
-          notamment de publications Web. Il prépare principalement aux métiers
-          de designer, infographiste, game designer ou technicien audiovisuel.
-          Les principaux débouchés se situent en agences de communication, en
-          agences Web, en agences publicitaires, ou dans les services de
-          communication des grandes entreprises.
-        </p>
+      <h2>Hommes ou Femmes ?</h2>
+      <h3>
+        Le pourcentage d'admissions des hommes et des femmes dans les BUT MMI en
+        2022
+      </h3>
+      <div class="canva">
+        <div class="homme"></div>
+        <div class="femme"></div>
       </div>
-      <img class="img1" src="./img/OIP.jpg" alt="jsp" />
     </div>
 
     <!--deuxième partie-->
@@ -131,6 +116,6 @@
       <a href="#"><h3>Haut de page ↑</h3></a>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/femme.js"></script>
   </body>
 </html>
