--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul>
               <li><a href="admissions.html">Admissions par filière</a></li>
               <li><a href="femme.html">Hommes ou Femmes ?</a></li>
-              <li><a href="#">d'où viennent-ils</a></li>
+              <li><a href="mention.html">Faut-il une mention ?</a></li>
               <li><a href="#">Pourquoi ?</a></li>
             </ul>
           </nav>
@@ -46,17 +46,17 @@
         <h2>Les BUT MMI dans Parcoursup :</h2>
         <p>
           Diplôme professionnel de niveau 6 (bac + 3), le BUT MMI (métiers du
-          multimédia et de l’Internet) forme à des activités relevant de
+          multimédia et de l'Internet) forme à des activités relevant de
           domaines variés, allant de la conception de sites Internet à la
           gestion de communautés sur les réseaux sociaux, en passant par la
           production de produits multimédias (jeux vidéo, applications mobiles,
           etc.) ou le développement de services Web. Le BUT MMI propose trois
           parcours différents, accessibles dès la 2e année : parcours création
           numérique ; parcours stratégie de communication numérique et design
-          d’expérience ; parcours développement Web et dispositifs
+          d'expérience ; parcours développement Web et dispositifs
           interactifs.Le parcours création numérique vise à développer
-          l’expression de message sur différents médias, sous la forme de
-          création graphique et d’écriture multimédia. II permet d’acquérir les
+          l'expression de message sur différents médias, sous la forme de
+          création graphique et d'écriture multimédia. II permet d'acquérir les
           techniques nécessaires à la création de ressources numériques,
           notamment de publications Web. Il prépare principalement aux métiers
           de designer, infographiste, game designer ou technicien audiovisuel.
@@ -75,7 +75,7 @@
 
     <div class="section_2">
       <div class="title">
-        <h2>Le BUT MMI c’est quoi ?</h2>
+        <h2>Le BUT MMI c'est quoi ?</h2>
       </div>
       <div class="row">
         <div class="pres">
@@ -83,7 +83,7 @@
             <img class="cercle" src="./img/fatigue.jpeg" alt="jsp" />
           </div>
           <h3>
-            Un BUT accessible à tout titulaire d’un baccalauréat, général ou
+            Un BUT accessible à tout titulaire d'un baccalauréat, général ou
             technologique (STMG ou STI2D).
           </h3>
         </div>
@@ -120,8 +120,8 @@
       <h2>Accessible par Parcoursup</h2>
       <p>
         Parcoursup est la plateforme nationale et officielle sur laquelle tu vas
-        faire tes vœux d’orientation pour entrer en études supérieures, après le
-        bac ou lors d’une potentielle réorientation.En 2024, Parcoursup
+        faire tes vœux d'orientation pour entrer en études supérieures, après le
+        bac ou lors d'une potentielle réorientation.En 2024, Parcoursup
         référence plus de 20.000 formations (dont les BUT).
       </p>
     </div>
