--- a/femme.html
+++ b/femme.html
@@ -31,7 +31,7 @@
             <ul>
               <li><a href="index.html">Accueil</a></li>
               <li><a href="admissions.html">Admissions par filière</a></li>
-              <li><a href="#">d'où viennent-ils</a></li>
+              <li><a href="mention.html">Faut-il une mention ?</a></li>
               <li><a href="#">Pourquoi ?</a></li>
             </ul>
           </nav>
