--- a/admissions.html
+++ b/admissions.html
@@ -36,7 +36,7 @@
             <ul>
               <li><a href="index.html">Accueil</a></li>
               <li><a href="femme.html">Hommes ou Femmes ?</a></li>
-              <li><a href="#">d'où viennent-ils</a></li>
+              <li><a href="mention.html">Faut-il une mention ?</a></li>
               <li><a href="#">Pourquoi ?</a></li>
             </ul>
           </nav>
