--- a/femme.html
+++ b/femme.html
@@ -44,14 +44,17 @@
     <div class="container">
       <h2>Hommes ou Femmes ?</h2>
       <h3>
-        Le pourcentage d'admissions des hommes et des femmes dans les BUT MMI en
-        2022
+        Le pourcentage d'admissions des hommes et des femmes dans les BUT MMI sur 3 ans
       </h3>
+      <div class="but">
+        <button id="but2020">2020</button>
+        <button id="but2021">2021</button>
+        <button id="but2022">2022</button>
+
+      </div>
       <div class="canva">
-        <div id="homme"></div>
-        <div id="femme">
-          
-        </div>
+        <div id="homme" class="scale-up-center"></div>
+        <div id="femme" class="scale-up-center"></div>
       </div>
       <div class="pct">
         <div id="pct_h"></div>
