--- a/admissions.html
+++ b/admissions.html
@@ -54,11 +54,13 @@
           <button id="data2Button">2021</button>
           <button id="data3Button">2022</button>
         </div>
+        <div class="size">
         <div class="contenu">
           <div id="camembert"></div>
           <div id="legend"></div>
         </div>
       </div>
+    </div>
     </div>
 
     <!--deuxième partie-->
